--- a/app/assets/javascripts/timeline.js.erb
+++ b/app/assets/javascripts/timeline.js.erb
@@ -1,7 +1,9 @@
+<% url = Rails.application.routes.url_helpers %>
 var jobsworth = jobsworth || {}
 
 jobsworth.TimeLine = (function($){
 
+  var timeline_path = "<%= CGI.unescape url.timeline_path %>";
   var header_template = '' +
       '<tr>' +
         '<td class="log_header" colspan="3">' +
@@ -43,7 +45,7 @@ jobsworth.TimeLine = (function($){
   TimeLine.prototype.loadMore = function() {
     var self = this;
     $("#load-more").html($("<img src=\"<%= image_path("spinner.gif") %>\">")).prop("disabled", true);
-    $.getJSON("/timeline/index", this.options, function(res) {
+    $.getJSON(timeline_path, this.options, function(res) {
       if (res.count >= self.options.limit) {
         for (var index in res.items) {
           var item = res.items[index];
