--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -6,11 +6,11 @@
     <div class="bar" style="width:<%= number_to_percentage(project.progress, :precision => 0) %>;"> </div>
   </div>
   <% if current_user.can?(project, 'grant') || current_user.can?(project, 'milestone') %>
-    <%= link_to '<i class="icon-pencil"></i>'.html_safe, { :controller => 'projects', :action => 'edit', :id => project },
+    <%= link_to '<i class="icon-pencil"></i>'.html_safe, edit_project_path(project),
         :class => "pull-left hide action", :rel => "tooltip", :title => t("projects.edit_project_html", project: escape_twice(project.name)) %>
   <% end %>
   <% if current_user.can?(project, 'see_unwatched') %>
-    <%= link_to '<i class="icon-list-alt"></i>'.html_safe, { :controller => 'projects', :action => 'show', :id => project },
+    <%= link_to '<i class="icon-list-alt"></i>'.html_safe, project,
         :class => "pull-left hide action", :rel => "tooltip", :title => t("projects.view_project_html", project: escape_twice(project.name)) %>
   <% end %>
 </div>
