--- a/app/views/projects/list_completed.html.erb
+++ b/app/views/projects/list_completed.html.erb
@@ -1,7 +1,6 @@
 <% @page_title = t("projects.completed_title", title: Setting.productName) %>
 
-<div class="page_header"><%= t("projects.completed_projects") %>
-</div>
+<div class="page_header"><%= t("projects.completed_projects") %></div>
 
 <table class="table table-striped table-bordered table-condensed">
   <tr>
@@ -10,12 +9,6 @@
     <th align="left"><%= t("projects.tasks") %></th>
     <th align="left">&nbsp;</th>
   </tr>
-  <% @completed_projects.each do |p| %>
-  <tr>
-    <td><%= "#{p.customer.name} / #{p.name}" %></td>
-    <td><%= tz.utc_to_local(p.completed_at).strftime(current_user.date_format) %></td>
-    <td><%= p.tasks.size %></td>
-    <td><%= link_to( t("projects.revert"), revert_project_path(p), :method => :post, :confirm => t("shared.are_you_sure") ) %></td>
-  </tr>
-  <% end %>
+
+  <%= render partial: 'completed_project', collection: @completed_projects %>
 </table>
