--- a/app/views/tasks/gantt.html.erb
+++ b/app/views/tasks/gantt.html.erb
@@ -1,12 +1,7 @@
 <% @page_title = t("tasks.gantt_title", title: Setting.productName) %>
 
 <%= render(:partial => "task_filters/search_filter", :locals => { :redirect_params => { :tag => params[:tag] }}) %>
-
-<ul class="nav nav-tabs">
-  <li><a href="/tasks"><i class="icon-list"></i> <%= t("tasks.icon_list") %> </a></li>
-  <li><a href="/tasks/calendar"><i class="icon-calendar"></i> <%= t("tasks.icon_calendar") %> </a></li>
-  <li class="active"><a href="/tasks/gantt"><i class="icon-align-left"></i> <%= t("tasks.icon_gantt") %> </a></li>
-</ul>
+<%= render 'tabbar', active: 'gantt' %>
 
 <div id="gantt"></div>
 
