--- a/app/assets/javascripts/tasks/task_notification_editor.js.erb
+++ b/app/assets/javascripts/tasks/task_notification_editor.js.erb
@@ -1,3 +1,4 @@
+<% url = Rails.application.routes.url_helpers %>
 // Place all the behaviors and hooks related to the matching controller here.
 // All this logic will automatically be available in application.js.
 
@@ -5,6 +6,19 @@ var jobsworth = jobsworth || {}
 jobsworth.tasks = jobsworth.tasks || {}
 
 jobsworth.tasks.TaskNotificationEditor = (function($) {
+
+  var auto_complete_for_customer_name_customers_path = "<%= CGI.unescape url.auto_complete_for_customer_name_customers_path %>";
+  var auto_complete_for_user_name_users_path         = function(project_id) { return resolve_url("<%= CGI.unescape url.auto_complete_for_user_name_users_path(project_id: '{project_id}') %>", {project_id: project_id}); };
+  var tasks_path      = "<%= CGI.unescape url.tasks_path %>";
+  var new_task_path   = "<%= CGI.unescape url.new_task_path %>";
+  var task_path       = function(id) { return resolve_url("<%= CGI.unescape url.task_path('{id}') %>",      {id: id}); };
+  var edit_task_path  = function(id) { return resolve_url("<%= CGI.unescape url.edit_task_path('{id}') %>", {id: id}); };
+  var get_watcher_task_path                       = function(id) { return resolve_url("<%= CGI.unescape url.get_watcher_task_path('{id}') %>", {id: id}); };
+  var users_to_notify_popup_task_path             = function(id, watcher_ids) { return resolve_url("<%= CGI.unescape url.users_to_notify_popup_task_path(id: '{id}', watcher_ids: '{watcher_ids}') %>", {id: id, watcher_ids: watcher_ids}); };
+  var get_default_watchers_for_customer_tasks_path = "<%= CGI.unescape url.get_default_watchers_for_customer_tasks_path %>";
+  var get_default_customers_tasks_path = "<%= CGI.unescape url.get_default_customers_tasks_path %>";
+  var get_default_watchers_tasks_path = "<%= CGI.unescape url.get_default_watchers_tasks_path %>";
+
   function TaskNotificationEditor(options) {
     this.options = options;
     this.el = this.options.el;
@@ -14,17 +28,17 @@ jobsworth.tasks.TaskNotificationEditor = (function($) {
 
   TaskNotificationEditor.prototype.initialize = function() {
     var self = this;
-    autocomplete('#task_customer_name_auto_complete', '/customers/auto_complete_for_customer_name', function(event, ui) {
+
+    autocomplete('#task_customer_name_auto_complete', auto_complete_for_customer_name_customers_path, function(event, ui) {
       self.customerAddHandler(event, ui);
       return false;
     });
 
-    autocomplete('#user_name_auto_complete', '/users/auto_complete_for_user_name', function(event, ui) {
+    autocomplete('#user_name_auto_complete', auto_complete_for_user_name_users_path(''), function(event, ui) {
       self.userAddHandler(event, ui);
       return false;
     });
-
-  }
+  };
 
   TaskNotificationEditor.prototype.bindEvents = function() {
     var self = this;
@@ -79,7 +93,7 @@ jobsworth.tasks.TaskNotificationEditor = (function($) {
       if(!mouse_is_inside) $('#users_to_notify_list').hide();
     });
 
-  }
+  };
 
   TaskNotificationEditor.prototype.showUsersToNotifyPopup = function() {
     var self = this;
@@ -87,7 +101,7 @@ jobsworth.tasks.TaskNotificationEditor = (function($) {
       return $(this).val();
     }).get().join(",");
 
-    $('#users_to_notify_list').load("/tasks/users_to_notify_popup?id=" + self.options.taskId + "&watcher_ids=" + watcherIds, function() {
+    $('#users_to_notify_list').load(users_to_notify_popup_task_path(self.options.taskId, watcherIds), function() {
         $('#users_to_notify_list').show();
 
         $('#users_to_notify_list ul li a').bind('click', function() {
@@ -113,9 +127,7 @@ jobsworth.tasks.TaskNotificationEditor = (function($) {
   }
 
   TaskNotificationEditor.prototype.userAddHandler = function(event, ui) {
-    var userId = ui.item.id;
-    var params = { user_id : userId, id : this.options.taskId };
-    this.addUser('/tasks/get_watcher', params);
+    this.addUser(get_watcher_task_path(this.options.taskId), { user_id : userId, id });
 
     $("#user_name_auto_complete").val("");
     return false;
@@ -124,13 +136,13 @@ jobsworth.tasks.TaskNotificationEditor = (function($) {
   TaskNotificationEditor.prototype.customerAddHandler = function(event, ui) {
     var self = this;
     var customerId = ui.item.id;
-    var params = { customer_id : customerId, id : this.options.taskId };
-    $.get('/tasks/get_customer', params, function(data) {
+    var params = { customer_id : customerId };
+    $.get(get_watcher_task_path(this.options.taskId), params, function(data) {
       $("#task_customers > div:first").append(data);
       self.customersChanged();
     }, 'html');
 
-    this.addUser('/tasks/get_default_watchers_for_customer', params);
+    this.addUser(get_default_watchers_for_customer_tasks_path, params);
 
     $("#task_customer_name_auto_complete").val("");
     return false;
@@ -142,11 +154,11 @@ jobsworth.tasks.TaskNotificationEditor = (function($) {
 
     if (customer_ids.length > 0) return;
 
-    $.get('/tasks/get_default_customers', {project_id: projectId, id: self.options.taskId}, function(data) {
+    $.get(get_default_customers_tasks_path, {project_id: projectId, id: self.options.taskId}, function(data) {
       $("#task_customers > div:first").html(data);
 
       // update whole list in case of project change
-      $.get('/tasks/get_default_watchers', {id: self.options.taskId, project_id: projectId, customer_ids: customer_ids}, function(data) {
+      $.get(get_default_watchers_tasks_path, {id: self.options.taskId, project_id: projectId, customer_ids: customer_ids}, function(data) {
         $("#task_users > div:first").html(data);
       })
 
