refs #10530 tags autocomplete fix, snippets path fix, missing routes added

--- a/app/assets/javascripts/tasks/task_editor.js.erb
+++ b/app/assets/javascripts/tasks/task_editor.js.erb
@@ -10,7 +10,11 @@ jobsworth.tasks.TaskEditor = (function($) {
   var dependency_tasks_path = '<%= CGI.unescape url.dependency_tasks_path %>';
   var auto_complete_for_resource_name_tasks_path = '<%= CGI.unescape url.auto_complete_for_resource_name_tasks_path %>';
   var resource_tasks_path = '<%= CGI.unescape url.resource_tasks_path %>';
-
+  var auto_complete_tags_path = '<%= CGI.unescape url.auto_complete_for_tags_tags_path %>';
+  var task_templates_path = '<%= CGI.unescape url.task_templates_path %>';
+  var refresh_service_options_tasks_path = '<%= CGI.unescape url.refresh_service_options_tasks_path %>';
+  var snippets_path = '<%= CGI.unescape url.snippets_path %>';
+  var billable_tasks_path = '<%= CGI.unescape url.billable_tasks_path %>';
 
   function TaskEditor(options) {
     this.options = options;
@@ -66,7 +70,7 @@ jobsworth.tasks.TaskEditor = (function($) {
       minlength: 3
     })
 
-    autocomplete_multiple_remote('#task_set_tags', '/tags/auto_complete_for_tags' );
+    autocomplete_multiple_remote('#task_set_tags', auto_complete_tags_path );
 
     $('#task_service_tip').popover({
       trigger: "hover",
@@ -105,11 +109,11 @@ jobsworth.tasks.TaskEditor = (function($) {
       $('#resource_name_auto_complete').autocomplete(
         'option',
         'source',
-        '/tasks/auto_complete_for_resource_name?customer_ids=' + customerIds.join(',')
+        auto_complete_for_resource_name_tasks_path + '?customer_ids=' + customerIds.join(',')
       )
 
       // update service options
-      $.getJSON("/tasks/refresh_service_options", {taskId: this.taskId, customerIds: customerIds.join(',')}, function(data) {
+      $.getJSON(refresh_service_options_tasks_path, {taskId: this.taskId, customerIds: customerIds.join(',')}, function(data) {
         $("#task_service_id", $(self.el)).html(data.html);
       })
 
@@ -125,7 +129,7 @@ jobsworth.tasks.TaskEditor = (function($) {
       if (!id) return true;
 
       id = id.split('-')[1];
-      $.get('/snippets/'+id + '.json', function(data) {
+      $.get(snippets_path + '/' + id + '.json', function(data) {
         $('#comment').val($('#comment').val() + '\n' + data.snippet.body);
       });
 
@@ -200,7 +204,7 @@ jobsworth.tasks.TaskEditor = (function($) {
 
     if (!projectId || customerIds.length == 0) return;
 
-    $.get("/tasks/billable", {project_id: projectId, customer_ids: customerIds, service_id: serviceId}, function(data) {
+    $.get(billable_tasks_path, {project_id: projectId, customer_ids: customerIds, service_id: serviceId}, function(data) {
       if (data.billable) {
         $("#billable-label").text("billable");
       } else {
