--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
       <%= yield(:side_panel) %>
       <%= render(:partial => "task_filters/list") %>
       <%= render :partial => "tags/panel_list" %>
-      <%= render(:partial => "tasks/nextTasks") %>
+      <%= render(:partial => "tasks/next_tasks") %>
     </div>
   </div>
 <% end %>
