--- a/app/assets/javascripts/tasks/task_notification_editor.js.erb
+++ b/app/assets/javascripts/tasks/task_notification_editor.js.erb
@@ -13,8 +13,8 @@ jobsworth.tasks.TaskNotificationEditor = (function($) {
   var new_task_path   = "<%= CGI.unescape url.new_task_path %>";
   var task_path       = function(id) { return resolve_url("<%= CGI.unescape url.task_path('{id}') %>",      {id: id}); };
   var edit_task_path  = function(id) { return resolve_url("<%= CGI.unescape url.edit_task_path('{id}') %>", {id: id}); };
-  var get_watcher_task_path = function(id) { return resolve_url("<%= CGI.unescape url.get_watcher_task_path('{id}') %>", {id: id}); };
-  var get_customer_task_path = function(id) { return resolve_url("<%= CGI.unescape url.get_customer_task_path('{id}') %>", {id: id}); };
+  var get_watcher_tasks_path = "<%= CGI.unescape url.get_watcher_tasks_path %>";
+  var get_customer_tasks_path = "<%= CGI.unescape url.get_customer_tasks_path %>";
   var users_to_notify_popup_task_path = function(id, watcher_ids) { return resolve_url("<%= CGI.unescape url.users_to_notify_popup_task_path(id: '{id}', watcher_ids: '{watcher_ids}') %>", {id: id, watcher_ids: watcher_ids}); };
   var get_default_watchers_for_customer_tasks_path = "<%= CGI.unescape url.get_default_watchers_for_customer_tasks_path %>";
   var get_default_customers_tasks_path = "<%= CGI.unescape url.get_default_customers_tasks_path %>";
@@ -128,7 +128,7 @@ jobsworth.tasks.TaskNotificationEditor = (function($) {
   }
 
   TaskNotificationEditor.prototype.userAddHandler = function(event, ui) {
-    this.addUser(get_watcher_task_path(this.options.taskId), { user_id: userId, id: this.options.taskId });
+    this.addUser(get_watcher_tasks_path, { user_id: userId, id: this.options.taskId });
 
     $("#user_name_auto_complete").val("");
     return false;
@@ -137,8 +137,8 @@ jobsworth.tasks.TaskNotificationEditor = (function($) {
   TaskNotificationEditor.prototype.customerAddHandler = function(event, ui) {
     var self = this;
     var customerId = ui.item.id;
-    var params = { customer_id : customerId };
-    $.get(get_customer_task_path(this.options.taskId), params, function(data) {
+    var params = { customer_id : customerId, id: this.options.taskId };
+    $.get(get_customer_tasks_path, params, function(data) {
       $("#task_customers > div:first").append(data);
       self.customersChanged();
     }, 'html');
